--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,7 @@
-/*Responsize typography */
-html { font-size: 1rem; }
+html { font-size: 1rem;
+       scroll-behavior: smooth; }
 
+/*Responsize typography */
 @media (min-width: 320px) {
     html { font-size: .5rem; }
 }
@@ -19,5 +20,5 @@ html { font-size: 1rem; }
 }
 
 @media (min-width: 2160px) {
-    html { font-size: 2.5rem; }
+    html { font-size: 1.5rem; }
 }
