--- a/src/style.css
+++ b/src/style.css
@@ -9,11 +9,16 @@
 	font-size: 40px;
 }
 
-
 .clickp:hover {
 	cursor: pointer;
 	color:#DAE9F8;
 }
+
+/*Jumbotron overrides*/
+.jumbotron{
+    margin-bottom:15px;
+		border-radius: 6px;
+          }
 
 /*Background images (Non-Parallax)*/
 .intro-bg {
@@ -78,4 +83,15 @@ border-top: .05rem solid #e5e5e5;
 
 .wn-footer a {
 color: yellow;
+}
+
+#sticky-footer {
+  flex-shrink: none;
+}
+
+/*Align to bottom of jumbotron */
+.push-to-bottom {
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
