--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
 	border-radius: 8px;
 	max-width: 340px;
 	max-height: 320px;
+	padding-bottom: 20px;
 }
 
 .emphasized {
@@ -90,8 +91,9 @@ color: yellow;
 }
 
 /*Align to bottom of jumbotron */
-.push-to-bottom {
-  position: absolute;
+#social-links {
+	padding-top: 15px;
+	position: absolute;
   width: 100%;
   height: 100%;
 }
