--- a/src/style.css
+++ b/src/style.css
@@ -90,10 +90,15 @@ color: yellow;
   flex-shrink: none;
 }
 
+/* Buttons */
+#learnMore {
+	padding-bottom: 25px;
+}
+
 /*Align to bottom of jumbotron */
-#social-links {
-	padding-top: 15px;
-	position: absolute;
+#socialLinks {
+	padding-top: 25px;
+	padding-bottom: 0px;
   width: 100%;
   height: 100%;
 }
