--- a/src/style.css
+++ b/src/style.css
@@ -91,14 +91,17 @@ color: yellow;
 }
 
 /* Buttons */
-#learnMore {
+#learn-more {
 	padding-bottom: 25px;
 }
 
-/*Align to bottom of jumbotron */
-#socialLinks {
+#social-links {
 	padding-top: 25px;
 	padding-bottom: 0px;
-  width: 100%;
-  height: 100%;
+}
+
+#social-but {
+	display : flex;
+	align-items : center;
+	justify-content: center;
 }
