--- a/src/Components/HomePage/about.css
+++ b/src/Components/HomePage/about.css
@@ -6,28 +6,30 @@
 
 /* Header Parallax Element Style*/
 .paral {
-min-height: 600px;
-background-attachment: fixed;
-background-size: cover;
-background-position: 50% 50%;
+  min-height: 600px;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
 /* Paragrapgh for Parallax Section */
 .paral p {
-color:#f5f5f5;
-text-align: center;
-line-height: 60px;
-font-size: 175%;
+  color: white;
+	text-shadow: 2px 2px 4px #000000;
+  text-align: center;
+  line-height: 60px;
+  font-size: 175%;
 }
 
 /* Heading for Parallax Section */
 .paral h1, h2 {
-color: rgba(255, 255, 255, 1);
+  color: white;
+	text-shadow: 2px 2px 4px #000000;
 }
 
 /* Image for Parallax Section */
 .paralsec {
-background-image: url('./img/background.jpg');
+  background-image: url('./img/background.jpg');
 }
 
 .clickp:hover {
